--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "DisneyInReact",
+  "name": "disneyinreact",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "start": "webpack serve --open --mode development"
+    "start": "webpack serve --open --mode development",
+    "start_json": "json-server --watch disneyData.json --port 3000"
   },
   "repository": {
     "type": "git",
