--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "start": "webpack serve --open --mode development",
-    "start_json": "json-server --watch disneyData.json --port 3000"
+    "start_json": "json-server --watch disneyData.json --port 3001"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
     "html-webpack-plugin": "^5.3.1",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^1.6.0",
-    "node-sass": "^6.0.0",
+    "node-sass": "^6.0.1",
     "sass-loader": "^12.1.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
@@ -39,6 +39,7 @@
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
